# NCT_Robotic_Arm

./: README.md  platformio.ini
GUI version/: CMakeLists.txt  Main.qml  main.cpp
lib/AnalogPin/: AnalogPin.cpp  AnalogPin.h  NCT_ADC.cpp  NCT_ADC.h
lib/Delay/: NCT_Delay.h
lib/PWM Lib/: NCT_PWM.cpp  NCT_PWM.h  PWMlibs.h
lib/Robot/: Robot.cpp  Robot.h
sketch_oct16a/: sketch_oct16a.ino
src/: main.cpp  test.cpp
test/: project_test.cpp
